Update index.html and findfood.jpg

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </div>
                             <div class="instructor-info">
                                 <h4 class="instructor-name">劉育維</h4>
-                                <p class="instructor-affiliation">APMIC MLOps 工程師</p>
+                                <p class="instructor-affiliation">Google AI 開發者專家</p>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         <p class="timeline-instructor">講師：陳靜儀 / 3 小時</p>
                         <p class="timeline-description">
                             以「領域驅動設計（Domain-Driven Design, DDD）」與 UX 設計師在生成式 AI 發展中的角色為核心，透過講座與概念導入，引導參與者重新思考 AI
-                            與使用者經驗設計之間的關係。探討生成式 AI 在當代數位產品中的應用前景，並解析 UX 設計師如何透過「語意建模」、「使用者意圖理解」與「交互場景設計」等方式，介入 AI
+                            與使用者經驗設計之間的關係。探討生成式 AI 在當代數位產品中的應用前景，並解析 UX 設計師如何透過「語意建模」、「使用者意圖理解」與「互動場景設計」等方式，介入 AI
                             系統的建構與優化過程。
                         </p>
                         <!-- Activity Photo Placeholder -->
@@ -264,7 +264,8 @@
                         <h3 class="timeline-title">領域驅動設計與UX設計師的角色貢獻工作坊 II</h3>
                         <p class="timeline-instructor">講師：陳靜儀 / 3 小時</p>
                         <p class="timeline-description">
-                            介紹「使用案例（Use Case）」、「使用者流程（User Flow）」與「領域故事敘述（Domain Storytelling）」等方法，並透過簡報與 Miro
+                            介紹與區分 AI-Powered 產品特色。介紹「使用案例（Use Case）」、「使用者流程（User Flow）」與「領域故事敘述（Domain
+                            Storytelling）」等方法，並透過簡報與 Miro
                             白板協作，實際演練如何在多方協作中進行需求與流程的視覺化。學員分組進行領域故事敘述的實作，模擬真實專案情境，協同定義業務流程與使用者互動場景。強調實作與協作，讓學員在實際操作中體驗領域驅動設計的應用。
                         </p>
                         <!-- Activity Photo Placeholder -->
@@ -292,8 +293,8 @@
                         <p class="timeline-instructor">講師：劉育維 / 6 小時</p>
                         <p class="timeline-description">
                             深入介紹 Google 的 AI 技術與生態系，實作多項無需撰寫程式碼的自動化工作流程。介紹 Google 的 AI Agent 概念，示範如何建立 Agentic AI
-                            Workflow，實現自動化任務處理。學習 Google Stitch，透過簡單的文字提示或圖像輸入，快速生成複雜的 UI 設計與前端程式碼，並將設計匯出至 Figma
-                            進行進一步編輯。涵蓋 Google Firebase Studio 的應用，學習如何建立全端 AI 應用程式。
+                            Workflow，實現自動化任務處理。學習 Google Stitch，透過簡單的文字提示或圖像輸入，快速生成複雜的 UI 設計與前端程式碼。涵蓋 Google Firebase
+                            Studio 的應用，學習如何建立全端 AI 應用程式。
                         </p>
                         <!-- Activity Photo Placeholder -->
                         <div class="timeline-photo">
